<resources>
    <string name="app_name">Success сounter</string>
    <string name="isSave">Сохранить</string>
    <string name="idCancel">Закрыть</string>
    <string name="title_activity_exercise_set">История</string>
    <string name="title_activity_fullscreen">Упражнение</string>
    <string name="title_activity_new_simple_ex">NewSimpleExActivity</string>
    <string name="title_new_simple_excercise">Новое простое упражнение</string>
    <string name="pref_file_name">application_prefs</string>
    <string name="title_new_compound_template">Новое составное упражнение</string>
    <string name="title_new_limited_template">Новое упражениение с ограничением ударов</string>
    <string name="missOptionName">Промах</string>
    <string name="successOptionName">Выполнено полностью</string>
    <string name="exerciseFinishedMessage">Закончено</string>
    <string name="trend">тренд</string>
    <string name="messageRestoreSummaryStep">Восстановить \"полный успех\"</string>
    <string name="msgNewSimpleUnlimExTitle">Простое без ограничений</string>
    <string name="msgNewSimpleUnlimExComment">Попадание/промах без ограничения по числу ударов</string>
    <string name="msgNewSimpleLimExTitle">Простое с ограничением</string>
    <string name="msgNewSimpleLimExComment">Попадание/промах с ограничем по числу ударов. До первого промаха. Например, надо собрать позицию.</string>
    <string name="msgNewCompoundExTitle">Составное упражнение</string>
    <string name="msgNewCompoundExComment">Удар может принести разное число очков.</string>
    <string name="msgNewExerciseActivityTitle">Новое упражнение</string>
    <string name="msgHistoryActivityTitle">История</string>
    <string name="msgNewSerisExTitle">Бесконечная серия</string>
    <string name="msgNewSerisExText">Бесконечная серия до первого промаха.</string>
    <string name="menuAbout">О программе...</string>
    <string name="msgAboutTitle" >О программе</string>
    <string name="txtSuccessLimit">числа попаданий</string>
    <string name="txtTotalShots">числа попыток</string>
    <string name="txtLimitWord">Ограничение</string>
    <string name="no_data_text">Начните упражнение</string>
    <string name="txtAttempts">Всего ударов</string>
    <string name="txtPercent">Эффективность</string>
    <string name="txtPoints">Попадания/Очки</string>
    <string name="txtResultDetailsHeader">Данные упражнения</string>
    <string name="txtExetciseDetailsHeader">Общая статистика</string>
    <string name="txtExerciseNotSelected">упражнение не выбрано</string>
    <string name="txtMainActivityTitle">Каталог упражнений</string>
    <string name="txtButtonHistoryTitle">История</string>
    <string name="titleDeleteDialog">Удаление</string>
    <string name="txtDeleteResults">Подтвердите удаление результатов упражнения</string>
    <string name="title_activity_about">О программе</string>
    <string name="defaultTagDialogTitle">Тэги</string>
    <string name="title_dialog_tag_filter">Фильтр по тэгам</string>
    <string name="title_dialog_result_tags">Тэги результата</string>
</resources>
