<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.max.successcounter.AboutActivity">

    <include
        android:id="@+id/stdtoobar"
        layout="@layout/toolbar" />

    <TextView
        android:id="@+id/lbName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="20dp"
        android:gravity="center_horizontal"
        android:text="TextView"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/stdtoobar" />

    <TextView
        android:id="@+id/lbLimitStaticText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/txtLimitWord"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lbName" />

    <RadioGroup
        android:id="@+id/rgLimitType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkedButton="@id/rbSuccess"
        app:layout_constraintTop_toBottomOf="@id/lbLimitStaticText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/rbSuccess"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtSuccessLimit"
            app:layout_constraintTop_toBottomOf="@id/lbLimitStaticText"/>

        <RadioButton
            android:id="@+id/rbTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtTotalShots"
            app:layout_constraintTop_toBottomOf="@id/rbSuccess"/>

    </RadioGroup>

    <EditText
        android:id="@+id/edLimit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="97dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="97dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rgLimitType" />

    <Button
        android:id="@+id/btnSave"
        android:background="@color/dark_blue"
        android:textColor="@color/secondAccent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Сохранить"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
